<resources>
    <string name="app_name">ChronicleList</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="about_content">Attributions</string>
    <string name="xml_json_credit">Copyright 2016-2019 Arnaud Guyon https://github.com/smart-fun/XmlToJson</string>
    <string name="goodreads_api">
        https://www.goodreads.com/api
    </string>
    <string name="pager_transformer">
        https://developer.android.com/training/animation/screen-slide
    </string>
    <string name="picasso_api">
        Picasso API
    </string>
    <string name="picasso_credit">
        Copyright 2013 Square, Inc. https://square.github.io/picasso/
    </string>

    <string name="title_activity_credits">About ChronicleList</string>
</resources>
